syntax = "proto3";

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "org.ipoliakov.dmap.protocol";
option java_outer_classname = "ContainerDMapMessages";
option optimize_for = SPEED;

enum PayloadType {
  ERROR_RES = 0;

  REQUEST_VOTE_REQ = 1;
  REQUEST_VOTE_RES = 2;
  APPEND_ENTRIES_REQ = 3;
  APPEND_ENTRIES_RES = 4;
  GET_LEADER_RES = 5;

  VALUE_RES = 1000;
  PUT_REQ = 1001;
  GET_REQ = 1002;
  REMOVE_REQ = 1004;
}

message DMapMessage {
  PayloadType payloadType = 1;
  int64 messageId = 2;
  bytes payload = 3;
}

message PutReq {
  PayloadType payloadType = 1;
  bytes key = 2;
  bytes value = 3;
}

message GetReq {
  PayloadType payloadType = 1;
  bytes key = 2;
}

message RemoveReq {
  PayloadType payloadType = 1;
  bytes key = 2;
}

message ValueRes {
  PayloadType payloadType = 1;
  bytes value = 2;
}

message ErrorMessage {
  PayloadType payloadType = 1;
  ErrorCode errorCode = 2;
  string message = 3;
}

enum ErrorCode {
  UNKNOWN_COMMAND = 0;
}